CSS: Fix tipuesearch vertical alignment

--- a/aura/static/tipuesearch/tipuesearch.css
+++ b/aura/static/tipuesearch/tipuesearch.css
@@ -20,6 +20,8 @@ http://www.tipue.com/search
      box-shadow: none;
 	outline: 0;
 	margin: 0;
+	margin-top: 7px;
+	margin-bottom: 7px;
 	background: #fff url('img/search.png') no-repeat 15px 15px;
 }
 
